// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Autocomplete
    classes={
      Object {
        "autoComplete": "autoComplete",
        "droplist": "droplist",
        "labels": "labels",
      }
    }
    droplistProps={
      Object {
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      }
    }
    inputProps={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Jss(Input)
          autoFocus={false}
          className="undefined"
          clear={false}
          counter={false}
          disabled={false}
          iconName={undefined}
          id={undefined}
          label={undefined}
          maxLength={100}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onRef={[Function]}
          placeholder={undefined}
          selectOnFocus={false}
          type="text"
          valueProp=""
        />,
        "",
        "",
      ],
      "className": "autoComplete",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "autoFocus": false,
          "className": "undefined",
          "clear": false,
          "counter": false,
          "disabled": false,
          "iconName": undefined,
          "id": undefined,
          "label": undefined,
          "maxLength": 100,
          "name": undefined,
          "onBlur": [Function],
          "onChange": [Function],
          "onFocus": [Function],
          "onRef": [Function],
          "placeholder": undefined,
          "selectOnFocus": false,
          "type": "text",
          "valueProp": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "",
      "",
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Jss(Input)
            autoFocus={false}
            className="undefined"
            clear={false}
            counter={false}
            disabled={false}
            iconName={undefined}
            id={undefined}
            label={undefined}
            maxLength={100}
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onRef={[Function]}
            placeholder={undefined}
            selectOnFocus={false}
            type="text"
            valueProp=""
          />,
          "",
          "",
        ],
        "className": "autoComplete",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "autoFocus": false,
            "className": "undefined",
            "clear": false,
            "counter": false,
            "disabled": false,
            "iconName": undefined,
            "id": undefined,
            "label": undefined,
            "maxLength": 100,
            "name": undefined,
            "onBlur": [Function],
            "onChange": [Function],
            "onFocus": [Function],
            "onRef": [Function],
            "placeholder": undefined,
            "selectOnFocus": false,
            "type": "text",
            "valueProp": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "",
        "",
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Autocomplete styles matches the snapshot 1`] = `
Object {
  "autoComplete": Object {
    "position": "relative",
  },
  "droplist": Object {
    "left": "0",
    "position": "absolute",
    "top": "49px",
    "width": "100%",
    "zIndex": "2",
  },
  "labels": Object {
    "marginTop": "-18px",
    "width": "100%",
  },
}
`;

exports[`AutocompleteJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Autocomplete)
    droplistProps={
      Object {
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      }
    }
    inputProps={Object {}}
    items={
      Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "autoComplete": "Autocomplete-autoComplete-0-1-33",
        "droplist": "Autocomplete-droplist-0-1-34",
        "labels": "Autocomplete-labels-0-1-35",
      },
      "droplistProps": Object {
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      },
      "inputProps": Object {},
      "items": Array [
        Object {
          "id": 1,
          "text": "Administrador",
          "textRight": "(222)",
        },
        Object {
          "id": 2,
          "text": "Administrador Sr",
          "textRight": "(134)",
        },
        Object {
          "id": 3,
          "text": "Administrador Jr",
          "textRight": "(52)",
        },
        Object {
          "id": 4,
          "text": "Administrar",
          "textRight": "(6)",
        },
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "autoComplete": "Autocomplete-autoComplete-0-1-33",
          "droplist": "Autocomplete-droplist-0-1-34",
          "labels": "Autocomplete-labels-0-1-35",
        },
        "droplistProps": Object {
          "items": Array [
            Object {
              "id": 1,
              "text": "Administrador",
              "textRight": "(222)",
            },
            Object {
              "id": 2,
              "text": "Administrador Sr",
              "textRight": "(134)",
            },
            Object {
              "id": 3,
              "text": "Administrador Jr",
              "textRight": "(52)",
            },
            Object {
              "id": 4,
              "text": "Administrar",
              "textRight": "(6)",
            },
          ],
        },
        "inputProps": Object {},
        "items": Array [
          Object {
            "id": 1,
            "text": "Administrador",
            "textRight": "(222)",
          },
          Object {
            "id": 2,
            "text": "Administrador Sr",
            "textRight": "(134)",
          },
          Object {
            "id": 3,
            "text": "Administrador Jr",
            "textRight": "(52)",
          },
          Object {
            "id": 4,
            "text": "Administrar",
            "textRight": "(6)",
          },
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
